--- a/src/App.css
+++ b/src/App.css
@@ -1,83 +1,19 @@
-.App {
-  text-align: center;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-.heading {
-  padding-left: 2rem;
-}
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.input {
+    background: none;
+    border: none;
+    outline: none;
+    box-shadow: inset 2px 5px 10px rgb(0, 0, 0);
+    color: #fff;
   }
-}
-.wrapper {
-  width: 100%;
-  min-height: 100vh;
-  background-color: #3d495d;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.App-header {
-  background-color: #282c34;
-  padding: 5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-.heading {
-  background-color: #3d495d;
-}
+  .input::placeholder {
+    font-size: 2rem;
+  }
+  .btn1 {
+    box-shadow: 3px 3px 10px rgba(0,0,0,1),
+  -1px -1px 6px rgba(255, 255, 255, 0.4);
+  }
+  .wrapper{
 
-.App-link {
-  color: #61dafb;
-}
-.button {
-  width: 2rem;
-}
-.hours {
-  display: flex;
-}
-.minutes {
-  display: flex;
-}
-.start {
-  padding: 1rem 2rem;
-  border-radius: 10px;
-  color: #fff;
-  background-color: #3d495d;
-  font-size: 2rem;
-  cursor: pointer;
-}
-.buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-.inputContainer {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  justify-content: center;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+box-shadow:  20px 20px 60px #7d9c8e,
+             -20px -20px 60px #bdd2c8;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
