--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: roca;
+  src: url(../public/Roca\ Regular.ttf);
+}
+
+@font-face {
+  font-family: roca-bold;
+  src: url(../public/Roca\ Bold.ttf);
+}
+@font-face {
+  font-family: lovelo;
+  src: url(../public/Lovelo\ Black.otf);
+}
+
+.nav-btn-container {
+  width: fit-content;
+  background: linear-gradient(
+    to right, 
+    rgba(255, 0, 0, 0),
+    rgba(255, 0, 0, 0) 50%,
+    #94DDDE 50%,
+    #94DDDE
+  );
 }
