few styling changes

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,35 @@
 box-shadow:  20px 20px 60px #7d9c8e,
              -20px -20px 60px #bdd2c8;
   }
+
+  .icon-btn {
+    background: white;
+    margin-left: 1em;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2em;
+    width: 2.2em;
+    border-radius: 0.7em;
+    right: 0.3em;
+    transition: all 0.3s;
+  }
+
+  button:hover .icon-btn {
+    width: calc(100% - 3rem);
+    border-radius: 20rem;
+  }
+
+  .icon-btn svg {
+    color: #156669;
+    transition: transform 0.3s;
+
+  }
+
+  button:hover .icon-btn svg {
+    transform: translateX(0.1em);
+  }
+  button:active .icon-btn {
+    transform: scale(0.95);
+  }
