--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@800&family=Lato:wght@400;700;900&family=Lilita+One&family=Raleway:wght@500;700;900&family=Righteous&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 * {
   margin: 0;
