--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@800&family=Lato:wght@400;700;900&family=Lilita+One&family=Raleway:wght@500;700;900&family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@800&family=Lato:wght@400;700;900&family=Lilita+One&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Noto+Sans&family=Poppins:ital,wght@0,300;0,400;0,500;1,300&family=Raleway:wght@500;700;900&family=Righteous&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -27,7 +27,7 @@
   src: url(../public/Lovelo\ Black.otf);
 }
 
-.nav-btn-container {
+/* .nav-btn-container {
   width: fit-content;
   background: linear-gradient(
     to right, 
@@ -36,4 +36,4 @@
     #94DDDE 50%,
     #94DDDE
   );
-}
+} */
