--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ box-shadow:  29px 29px 57px #010a10,
              -29px -29px 57px #021929;
   } */
 
-  .upt{
+  /* .upt{
     -webkit-text-stroke: 1px #7cbebf;
    color: transparent;
    text-shadow:
@@ -91,7 +91,7 @@ box-shadow:  29px 29px 57px #010a10,
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
-  }
+  } */
   .main-side-txt{
     /* box-shadow:  5px 5px 0px #b7c5cc; */
              
