--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@800&family=Lato:wght@400;700;900&family=Lilita+One&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Noto+Sans&family=Poppins:ital,wght@0,300;0,400;0,500;1,300&family=Raleway:wght@500;700;900&family=Righteous&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@800&family=Lato:wght@400;700;900&family=Lilita+One&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Noto+Sans&family=Poppins:ital,wght@0,300;0,400;0,500;1,300&family=Raleway:wght@500;700;900&family=Righteous&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+:root {
+  --sidebar-bg-dark: #021420;
+  --sidebar-bg-light: #156669;
+  --sidebar-highlight: #97c0bc;
+}
 * {
   margin: 0;
   padding: 0;
@@ -63,15 +67,11 @@ button:active .icon-btn {
   border-radius: 50%;
 }
 
-
-
 .nav-link {
   background: #021420;
   box-shadow: 29px 29px 57px #010a10, -29px -29px 57px #031e30;
   /* border-radius: 56% 44% 28% 72% / 38% 33% 67% 62% ; */
 }
-
-
 
 .tag {
   backdrop-filter: blur(56px);
@@ -118,31 +118,27 @@ button:active .icon-btn {
 }
 .tabShadow3 {
   box-shadow: 2px 2px 57px #010a10, -2px -2px 57px #031e30;
-
 }
 .tabShadow4 {
   box-shadow: 29px 29px 57px #010a10, -29px -29px 57px #031e3088;
-  
 }
 .bgs3 {
   filter: drop-shadow(0 0 5rem rgba(9, 128, 128, 0.134));
 }
 
-.r-img{
+.r-img {
   background: #156669;
-box-shadow:  20px 20px 29px #021420dc,
-             -20px -20px 29px #0a2d3cc4;
+  box-shadow: 20px 20px 29px #021420dc, -20px -20px 29px #0a2d3cc4;
 }
 
 /* .left-img img{
   filter: drop-shadow(0 0 5px rgb(255, 255, 255));
 } */
 
-.img-container{
+.img-container {
   /* background: #021a29; */
   background: #156669;
-box-shadow:  29px 29px 57px #010a10,
-           -29px -29px 57px #031e30;
+  box-shadow: 29px 29px 57px #010a10, -29px -29px 57px #031e30;
   /* border-radius: 56% 44% 28% 72% / 38% 33% 67% 62% ; */
   animation: blob 10s infinite linear alternate;
 }
@@ -152,17 +148,16 @@ box-shadow:  29px 29px 57px #010a10,
     border-radius: 56% 44% 28% 72% / 38% 33% 67% 62%;
   }
 
-  25%{
-      border-radius: 50% ;
+  25% {
+    border-radius: 50%;
   }
   50% {
-    border-radius: 68% 32% 83% 17% / 41% 52% 48% 59% ;
+    border-radius: 68% 32% 83% 17% / 41% 52% 48% 59%;
   }
 
   75% {
     border-radius: 50%;
   }
-
 
   100% {
     border-radius: 56% 44% 28% 72% / 38% 33% 67% 62%;
@@ -172,24 +167,21 @@ box-shadow:  29px 29px 57px #010a10,
 .recharts-legend-item-text {
   font-size: 1rem;
   font-weight: 500;
-
 }
 
-.recharts-tooltip-item{
-  font-size:2.2rem;
+.recharts-tooltip-item {
+  font-size: 2.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  border-top: solid black 2px ;
+  border-top: solid black 2px;
   font-weight: 600;
   color: #156669;
 
   /* border-radius: 2rem; */
-
-  
 }
-.recharts-tooltip-label{
+.recharts-tooltip-label {
   font-size: 2rem;
   color: #156669;
   background-color: #000;
@@ -200,31 +192,25 @@ box-shadow:  29px 29px 57px #010a10,
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
   box-shadow: 2px 2px 5px #010a10, -2px -2px 5px #031e30;
-
-  
-
-
 }
 
-.recharts-tooltip{
+.recharts-tooltip {
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
-.recharts-default-tooltip{
+.recharts-default-tooltip {
   border-radius: 2rem;
   display: flex;
-  
+
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #000;
-  
 }
 
-.recharts-rectangle{
+.recharts-rectangle {
   border-top-right-radius: 50%;
   margin: 0%;
   padding: 0%;
